WIP: Trying to generalize HTTPS